--- a/網頁簡介.html
+++ b/網頁簡介.html
@@ -6,6 +6,14 @@
 	<title>劉伊宸簡介</title>
 </head>
 <body>
-	
+	劉伊宸
+	Yi-Chen Liu
+
+	個人網頁：https://www.pu.edu.tw/
+	Tel: 04-26328001#18110
+	E-Mail: emilyliu0227@gmail.com
+</body>
+</html>
+
 </body>
 </html>
