--- a/網頁簡介.html
+++ b/網頁簡介.html
@@ -6,12 +6,12 @@
 	<title>劉伊宸簡介</title>
 </head>
 <body>
-	劉伊宸
-	Yi-Chen Liu
+	<h1>劉伊宸<h1>
+	<h2>Yi-Chen Liu<h2>
 
-	個人網頁：https://www.pu.edu.tw/
-	Tel: 04-26328001#18110
-	E-Mail: emilyliu0227@gmail.com
+	個人網頁：https://www.pu.edu.tw/<br>
+	Tel: 04-26328001#18110<br>
+	E-Mail: emilyliu0227@gmail.com<br>
 </body>
 </html>
 
