--- a/網頁簡介.html
+++ b/網頁簡介.html
@@ -9,9 +9,9 @@
 	<h1>劉伊宸<h1>
 	<h2>Yi-Chen Liu<h2>
 
-	個人網頁：https://www.pu.edu.tw/<br>
-	Tel: 04-26328001#18110<br>
-	E-Mail: emilyliu0227@gmail.com<br>
+	個人網頁：<a href="https://www.pu.edu.tw">https://www.pu.edu.tw</a>/<br>
+	Tel: <a href="tel:04-26328001#18110">04-26328001#18110</a><br>
+	E-Mail: <a href="emilyliu0227@gmail.com">emilyliu0227@gmail.com</a><br>
 </body>
 </html>
 
