--- a/網頁簡介.html
+++ b/網頁簡介.html
@@ -11,7 +11,7 @@
 
 	個人網頁：<a href="https://www.pu.edu.tw">https://www.pu.edu.tw</a>/<br>
 	Tel: <a href="tel:04-26328001#18110">04-26328001#18110</a><br>
-	E-Mail: <a href="emilyliu0227@gmail.com">emilyliu0227@gmail.com</a><br>
+	E-Mail: <a href="mailto:emilyliu0227@gmail.com">emilyliu0227@gmail.com</a><br>
 </body>
 </html>
 
