--- a/網頁簡介.html
+++ b/網頁簡介.html
@@ -6,21 +6,42 @@
 	<title>劉伊宸簡介</title>
 </head>
 <body>
-	<img src="cliff.jpg"></img>
+	<table width="70%">
+		<tr>
+			<td>
+	<img src="cliff.jpg" width="110%"></img>
+	</td>
+
+			<td>
 	<h1>劉伊宸<h1>
 	<h2>Yi-Chen Liu<h2>
+		</td>
+		</tr>
+	</table>
 
+
+	<table width="70%" border="1">
+		<tr>
+			<td>
 	個人網頁：<a href="https://www.pu.edu.tw">https://www.pu.edu.tw</a>/<br>
 	Tel: <a href="tel:04-26328001#18110">04-26328001#18110</a><br>
 	E-Mail: <a href="mailto:emilyliu0227@gmail.com">emilyliu0227@gmail.com</a><br>
-	
+	</td>
+
+			<td>
 	大象席地而坐電影配樂<br>
 	<audio controls>
 		<source src="elephant.mp3" type="audio/mP3">
 	</audio><br>
+	</td>
 
+			<td>
 	不要去臺灣<br>
 	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
+	</td>
+		</tr>
+	</table>
+
 
 </body>
 </html>
