--- a/rwd.html
+++ b/rwd.html
@@ -28,38 +28,21 @@
 		<tr>
 			<td>
 	<img src="cliff.jpg" width="110%"id="pic" onmouseover="change1()" onmouseout="change2()"></img>
-	</td>
-
-			<td>
-	<h1>劉伊宸<h1>
-	<h2 id="h2text">Yi-Chen Liu<h2>
-		</td>
-		</tr>
-	</table>
-
-
-	<table width="70%" border="1">
-		<tr>
-			<td>
+	
+	<h3>劉伊宸 (Yi-Chen Liu)<h3>
 	個人網頁：<a href="https://www.pu.edu.tw">https://www.pu.edu.tw</a>/<br>
 	Tel: <a href="tel:04-26328001#18110">04-26328001#18110</a><br>
 	E-Mail: <a href="mailto:emilyliu0227@gmail.com">emilyliu0227@gmail.com</a><br>
-	</td>
 
-			<td>
+	<h3>電影配樂</h3>
 	大象席地而坐電影配樂<br>
 	<audio controls>
 		<source src="elephant.mp3" type="audio/mP3">
 	</audio><br>
-	</td>
-
-			<td>
+	<h3>推薦影片</h3>
 	不要去臺灣<br>
 	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
-	</td>
-		</tr>
-
-	</table>
+	
 	<iframe
     allow="microphone;"
     width="350"
