--- a/rwd.html
+++ b/rwd.html
@@ -25,12 +25,15 @@
 </head>
 <body>
 
+	<nav>
 	<ul>
 		<li><a href="#Emily">關於我</a></li>
 		<li><a href="#soundtrack">電影配樂</a></li>
 		<li><a href="youtube">推薦影片</a></li>
 	</ul>
+	<nav>
 
+	<main>
 	<img src="cliff.jpg" width="110%"id="pic" onmouseover="change1()" onmouseout="change2()"></img>
 	
 	<h3 id="Emily">劉伊宸 (Yi-Chen Liu)<h3>
@@ -46,13 +49,12 @@
 	<h3 id="youtube">推薦影片</h3>
 	不要去臺灣<br>
 	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
-	
-	<iframe
-    allow="microphone;"
-    width="350"
-    height="430"
-    src="https://console.dialogflow.com/api-client/demo/embedded/4fcfbf3f-c74e-46f8-8e77-5b79192650b0">
-</iframe>
+	<main>
+
+	<footer>
+		Copyright ©  劉伊宸. All Rights Reserved.
+	</footer>
+
 
 
 </body>
