--- a/rwd.html
+++ b/rwd.html
@@ -29,12 +29,19 @@
 </head>
 <body>
 
-	<nav>
-	<ul>
-		<li><a href="#Emily">關於我</a></li>
-		<li><a href="#soundtrack">電影配樂</a></li>
-		<li><a href="youtube">推薦影片</a></li>
-	</ul>
+	<nav class="navbar navbar-expand-lg bg-light">
+		<a class="navbar-brand">導覽列</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#ITEMS">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="ITEMS">
+			<ul class="navbar-nav">
+				<li class="nav-item"><a href="#Emily" class="nav-link active">關於我</a></li>
+				<li class="nav-item"><a href="#soundtrack" class="nav-link active">電影配樂</a></li>
+				<li class="nav-item"><a href="#youtube" class="nav-link active">推薦影片</a></li>
+			</ul>
+		</div>
 	<nav>
 
 	<main class="container-fluid bg-primary text-white text-center">
@@ -47,23 +54,25 @@
 			個人網頁：<a href="https://www.pu.edu.tw">https://www.pu.edu.tw</a>/<br>
 			Tel: <a href="tel:04-26328001#18110">04-26328001#18110</a><br>
 			E-Mail: <a href="mailto:emilyliu0227@gmail.com">emilyliu0227@gmail.com</a><br>
-			</section>
+		</section>
 
-					<section class="col-lg-4">
+		<section class="col-lg-4">
 			<h3 id="soundtrack">電影配樂</h3>
 			大象席地而坐電影配樂<br>
 			<audio controls>
 				<source src="elephant.mp3" type="audio/mP3">
 			</audio><br>
-			</section>
+		</section>
 
-					<section class="col-lg-4">
+		<section class="col-lg-4">
 			<h3 id="youtube">推薦影片</h3>
 			不要去臺灣<br>
+
 			<div class="ratio ratio-16x9">
 				<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
 			</div>
-	</section>
+
+		</section>
 
 	</div>
 	<main>
