--- a/rwd.html
+++ b/rwd.html
@@ -5,9 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>劉伊宸簡介</title>
 	<style type="text/css">
-		* { font-family:"標楷體"; margin-left:auto; margin-right:auto;}
-		h1 {color:blue; font-size:60px;}
-		h2 {color:#33ff33; font-size:40px;}
+			* { font-family:"標楷體"; margin-left:auto; margin-right:auto;}
+			h1 {color:blue; font-size:60px;}
+			h2 {color:#33ff33; font-size:40px;}
+			.col-lg-4 {border: 1px solid;}
 	</style>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,10 +25,10 @@
   			document.getElementById("h2text").innerText = "Yi-Chen Liu";
 		}
 	</script>
-
-
 </head>
 <body>
+
+
 
 	<nav class="navbar navbar-expand-lg bg-light">
 		<a class="navbar-brand">導覽列</a>
@@ -41,7 +42,7 @@
 				<li class="nav-item"><a href="#soundtrack" class="nav-link active">電影配樂</a></li>
 				<li class="nav-item"><a href="#youtube" class="nav-link active">推薦影片</a></li>
 			</ul>
-		</div>
+		</nav>
 	<nav>
 
 	<main class="container-fluid bg-primary text-white text-center">
@@ -51,9 +52,9 @@
 	<div class="row">
 		<section class="col-lg-4">
 			<h3 id="Emily">劉伊宸 (Yi-Chen Liu)<h3>
-			個人網頁：<a href="https://www.pu.edu.tw">https://www.pu.edu.tw</a>/<br>
-			Tel: <a href="tel:04-26328001#18110">04-26328001#18110</a><br>
-			E-Mail: <a href="mailto:emilyliu0227@gmail.com">emilyliu0227@gmail.com</a><br>
+			個人網頁：<a href="https://www.pu.edu.tw" class="text-decoration-none text-white bg-info">https://www.pu.edu.tw</a>/<br>
+			Tel: <a href="tel:04-26328001#18110" class="text-decoration-none text-white bg-info">04-26328001#18110</a><br>
+			E-Mail: <a href="mailto:emilyliu0227@gmail.com" class="text-decoration-none text-white bg-info">emilyliu0227@gmail.com</a><br>
 		</section>
 
 		<section class="col-lg-4">
